k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-example
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-example
  template:
    metadata:
      labels:
        app: flask-example
    spec:
    template:
    spec:
      securityContext:
        runAsUser: 1001
        runAsNonRoot: true
      containers:
        - name: flask-example
          image: registry.internal.uia.no/ikt206-g-25v-devops/group23/exam-ikt206/flask-example-staging:v1.0.4
          ports:
            - containerPort: 5000
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: "500m"
              memory: "256Mi"
            requests:
              cpu: "250m"
              memory: "128Mi"
      imagePullSecrets:
        - name: gitlab-registry-auth
