k8s/production/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-production
  namespace: production
spec:
  selector:
    app: postgres-production
  ports:
    - port: 5432
      targetPort: 5432
