k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: flask.production.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-example
                port:
                  number: 80
